tests/miniJava/neg/001585_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int [] java ; int [ 0 ] ; } }
